@@ -6,9 +6,13 @@ test_input/test48.py:10: Object (i) has no attribute (has_no_method)
 test_input/test48.py:11: Object (l) has no attribute (has_no_method)
 test_input/test48.py:12: Object (d) has no attribute (has_no_method)
 test_input/test48.py:13: Object (s) has no attribute (has_no_method)
-test_input/test48.py:16: Object (i) has no attribute (has_no_attr)
-test_input/test48.py:17: Object (l) has no attribute (has_no_attr)
-test_input/test48.py:18: Object (d) has no attribute (has_no_attr)
-test_input/test48.py:19: Object (s) has no attribute (has_no_attr)
-test_input/test48.py:26: Object (jj) has no attribute (a)
-test_input/test48.py:27: Object (jj) has no attribute (b)
+test_input/test48.py:14: Object (n) has no attribute (has_no_method)
+test_input/test48.py:15: Object (e) has no attribute (has_no_method)
+test_input/test48.py:17: Object (i) has no attribute (has_no_attr)
+test_input/test48.py:18: Object (l) has no attribute (has_no_attr)
+test_input/test48.py:19: Object (d) has no attribute (has_no_attr)
+test_input/test48.py:20: Object (s) has no attribute (has_no_attr)
+test_input/test48.py:21: Object (n) has no attribute (has_no_attr)
+test_input/test48.py:22: Object (e) has no attribute (has_no_attr)
+test_input/test48.py:28: Object (jj) has no attribute (a)
+test_input/test48.py:29: Object (jj) has no attribute (b)
