@@ -6,18 +6,20 @@ class X:
     def y(self): pass
 
 def x():
-    i, l, d, s, n = 0, [], {}, '', None
+    i, l, d, s, n, e = 0, [], {}, '', None, Ellipsis
     i.has_no_method()
     l.has_no_method()
     d.has_no_method()
     s.has_no_method()
     n.has_no_method()
+    e.has_no_method()
 
     i.has_no_attr
     l.has_no_attr
     d.has_no_attr
     s.has_no_attr
     n.has_no_attr
+    e.has_no_attr
 
     l.sort()
     d.clear()
